next
----

ergatis-v2r8b1-rc1
------------------
-interface: added pipeline comment display in pipeline list view
-interface: added pipeline ID to pipeline view page titles (feat request 1930140)
-bsml2chado: now has mysql support
-bug 1784444: compress_file.pl now handles retry attempts
-augustus: revemped augustus options a little to make it more general use
-bsml2fasta: fixed Seq-data parsing bug (previously wouldn't extract anything)
-bsml2legacydb.pl: now pads exon ids to 6 digits
-bsml2legacydb.pl: now reads in pwd_file.  --user, --pass, --server all overwrite what is in defaultpwdfile, or what is in a user supplied pwd_file, which would trump the default.
-genscan2bsml.pl: no longer attempts to create exonless predictions where they exist in genscan output.
-fgenesh2bsml.pl: now uses Chado::Gene modeling.  fgenesh.i1.xml updated accordingly.
-glimmerHMM2bsml.pl: no longer off by one on right side coords.
-reset_subgroups.pl: marks subgroups not marked complete as incomplete given an iterator workflow xml file
-augustus2bsml.pl: now automatically detects executable version and parses correctly
-auto_annotate: removed from Makefile.PL.  replaced by predict_prokaryotic_gene_function.  will eventually be deprecated completely.
-new component: predict_prokaryotic_gene_function
-Prokaryotic_Annotation_Pipeline: moved tmhmm and lipoprotein_motif earlier in the pipeline so they can be used in functional prediction step
-Prokaryotic_Annotation_Pipeline: moved translate_sequence.default so that tmhmm and lipoprotein can use the translated sequences fromauto_gene_curation.all output
-start_site_curation: added component
-CHANGELOG: now in reverse chronological order
-start_site_curation: changed output of changed bsml to have the changed.bsml extension instead of new.bsml
-pipeline_summary: will now accept cds and polypeptide fasta and add Sequence element for these features if not already present