@@ -9,6 +9,7 @@ $;COGS_BSML_LIST$; =
 $;COG_LOOKUP$; = /usr/local/db/common/ncbi_cogs/whog.1
 $;LOCUS_PREFIX$; =
 $;ORGANISM$; = 
+$;TRANSLATION_TABLE$; = 11
 $;CDS_FASTA$; = 
 $;POLYPEPTIDE_FASTA$; =
 
